--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
           memory: 512M
 
   grafana:
-    image: fg2it/grafana-armhf:v5.0.4
+    image: unibaktr/grafana:v5.0.4
     networks:
       - ktrnet
     ports:
